--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -5,17 +5,22 @@
 <html> 
     <head>
         <title> 
+            
             Culinary Carnival - {{Page}}
         </title>
 
         {% load static %}
+        
         <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
     </head> 
     
     <body>
         <div class="navbar">
             <div class="logo">
-                <img src="{{ MEDIA_URL }}logoplaceholder.png" alt="Culinary Carnival Logo" height="80" width="200"/>
+                <img src="{{ MEDIA_URL }}logoplaceholder.png" alt="Culinary Carnival Logo"/>
+                {% block heading %} 
+          
+                {% endblock %}
                 {{ Page }} Page
             </div>
             <div class="links">
@@ -24,6 +29,10 @@
                 {% endif %}
                 {% if user.is_authenticated %} 
                     <a href="{% url 'recipes:logout' %}">Logout</a>
+                    <div class = profile_photo>
+                        Hi, {{user.first_name}}!
+                        <img src="{{ user.userprofile.picture.url }}">
+                    </div>
                 {% else %}
                     <a href="{% url 'recipes:register' %}">Register</a>
                     <a href="{% url 'recipes:login' %}">Login</a>
@@ -43,8 +52,10 @@
 
         <div>
             {% block body_block %} 
+          
             {% endblock %}
         </div>
 
     </body>  
 </html>
+
