--- a/templates/recipes/home.html
+++ b/templates/recipes/home.html
@@ -4,7 +4,7 @@
 {% load staticfiles %}
 {% block body_block %} 
 <div class="sidebar">
-    <a href="category1">category1</a>
+    <a href="#category1">category1</a>
     <a href="#category2">category2</a>
     <a href="#category3">category3</a>
 </div>
