--- a/templates/recipes/register.html
+++ b/templates/recipes/register.html
@@ -5,20 +5,76 @@
 
 
 {% block body_block %}
-<h1>Register for Culinary Carnival</h1>
-{% if registered %}
-<strong>thank you for registering!</strong>
-<a href="{% url 'recipes:home' %}">Return to the homepage.</a><br />
-{% else %}
-<strong>register here!</strong><br />
-<form id="user_form" method="post" action="{% url 'recipes:register' %}"
-    enctype="multipart/form-data"> 
-    {% csrf_token %}
-    <!-- Display each form -->
-    {{ user_form.as_p }}
-    {{ profile_form.as_p }}
-    <!-- Provide a button to click to submit the form. -->
-    <input type="submit" name="submit" value="Register" /> 
-</form>
-{% endif %}
+<div class = login_register_heading>
+    Register for Culinary Carnival
+</div>
+<div class="container">
+    <div class="form-group">
+        <form role="form" method="post" action="{% url 'recipes:register' %}" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="form-group">
+                <p class="required">
+                    <label class="login_register_label" for="id_username">Username:</label>
+                    <input class="input" id="id_username" maxlength="30" name="username" type="text" />
+                    <span class="login_register_label">
+                        Required. 30 characters or fewer. Letters, digits and @/./+/-/_ only.
+                    </span>
+                </p>
+                <p class="required">
+                    <label class="login_register_label" for="id_first">First name:</label>
+                    <input class="input" id="id_first" name="first_name" type="text" />
+                </p>
+                <p class="required">
+                    <label class="login_register_label" for="id_last">Last name:</label>
+                    <input class="input" id="id_last" name="last_name" type="text" />
+                </p>
+                <p class="required">
+                    <label class="login_register_label" for="id_email">E-mail:</label>
+                    <input class="input" id="id_email" name="email" type="email" />
+                </p>
+                <p class="required">
+                    <label class="login_register_label" for="id_password">Password:</label>
+                    <input class="input" id="id_password" name="password" type="password" />
+                </p>
+            </div>
+            
+            <div class="login_buttons">
+                <label class="login_register_label" for="id_picture">Profile photo:</label>
+                <input class="login_register_label" id="id_picture" name="picture" type="file" accept="image/*" onchange="previewImage(event)">
+                <div id="imagePreview">
+                    <img id="placeholderPhoto" class="profile-photo" src="{{ MEDIA_URL }}photo_placeholder.png" alt="Profile Photo" height="200" width="200" />
+                </div>
+            </div>
+
+            <button type="submit" class="submit">Submit</button>
+            
+        </form>
+    </div>
+</div>
+<script>
+    function previewImage(event) {
+        var input = event.target;
+        var reader = new FileReader();
+        var placeholderPhoto = document.getElementById('placeholderPhoto');
+
+        reader.onload = function() {
+            var img = document.createElement('img');
+            img.src = reader.result;
+            img.style.width = '200px';
+            img.style.height = '200px';
+
+            document.getElementById('imagePreview').innerHTML = '';
+            document.getElementById('imagePreview').appendChild(img);
+        };
+
+        reader.readAsDataURL(input.files[0]);
+
+        // Hide the placeholder photo
+        placeholderPhoto.style.display = 'none';
+    }
+</script>
+    </form>
+    </div>
+</div>
+
 {% endblock %}
