--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -12,12 +12,13 @@
         {% load static %}
         
         <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
+        <script src="{% static 'script.js' %}"></script>
     </head> 
     
     <body>
         <div class="navbar">
             <div class="logo">
-                <img src="{{ MEDIA_URL }}logoplaceholder.png" alt="Culinary Carnival Logo"/>
+                <img src="{{ MEDIA_URL }}logo.png" alt="Culinary Carnival Logo"/>
                 {% block heading %} 
           
                 {% endblock %}
