--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -29,6 +29,7 @@
                     <a href="{% url 'recipes:home' %}">Home</a>
                 {% endif %}
                 {% if user.is_authenticated %} 
+                    <a href="{% url 'recipes:edit_profile' %}">Edit Profile</a>
                     <a href="{% url 'recipes:logout' %}">Logout</a>
                     <div class = profile_photo>
                         Hi, {{user.first_name}}!
