--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,9 @@
+/*Base Page*/
 body {
     background-color: lightgrey;
 }
 
+/*Navbar and contents*/
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -29,7 +31,6 @@ body {
     align-items: center;
 }
 
-
 .links a {
     text-decoration: none;
     color: black;
@@ -43,15 +44,11 @@ body {
     border-radius: 15px;
 }
 
-.links a:first-child {
-    margin-left: 0;
-}
-
 .profile_photo {
     float: right;
     display: flex;
-    align-items: center;
-    
+    align-items: center; 
+    margin-left: 20px; 
 }
 
 .profile_photo img {
@@ -59,8 +56,9 @@ body {
     height: 75px;
     border-radius: 50%;
     margin-left: 20px;
-    
 }
+
+/*Popular categories bar*/
 .categories {
     display: flex;
     justify-content: space-between;
@@ -68,9 +66,6 @@ body {
     padding: 20px 10px;
     margin: 10px 0px ;
     border-radius: 15px;
-}
-.popular {
-    display: flex; 
     align-items: center; 
 }
 
@@ -80,21 +75,19 @@ body {
     padding: 6px;
     text-decoration: none;
     font-size: 20px;
-    border-radius: 5%;
+    border-radius: 15%;
     font-weight: bold;
+    margin-left: 20px;
+
 }
 
 .popular a:hover {
     background-color: cyan;
     color: black;
+    border-radius: 15px;
 }
 
-.search {
-    display: flex;
-    align-items: center;
-}
-
-.search input[type="text"] {
+.categories input[type="text"] {
     width: 200px; 
     height: 20px; 
     padding: 10px; 
@@ -102,6 +95,17 @@ body {
     font-size: 20px;
     padding: 6px;
     border-radius: 15px;
+}
+
+/*Sidebar*/
+.sidebar {
+    overflow: auto;
+    padding: 10px;
+    width: 200px;
+    border-radius: 15px;
+    background-color: mintcream;
+    position: fixed;
+    height: 100%;
 }
 
 .sidebar a {
@@ -119,62 +123,48 @@ body {
     border-radius: 15px;
 }
 
-.sidebar {
-    overflow: auto;
-    padding: 10px;
-    width: 200px;
-    border-radius: 15px;
-    background-color: mintcream;
-    position: fixed;
-    height: 100%;
-}
 
+/*Home Page*/
 .home_content {
     margin-left: 220px; 
 }
 
 .welcome_message {
-    
     padding-left: 20px; 
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
-    
+    width: 55%;
 }
 
 .home_images {
-   
-    margin-right: 10px;
     margin-left:20px;
     float: right;
-   
 }
+
 .home_images img{
-   
     height : 250px;
     width: 400px;
     border-radius: 15px;
 }
 
-.login_register_heading{
-
-    font-size: 25px;
+/*Login + Register Page*/
+#heading{
+    font-size: 28px;
     padding: 40px 20px; 
     font-weight: bold;
     text-decoration: underline;
 
 }
 .login_register_label{
-
     font-size: 20px;
     margin: 8px 20px;
-    
 }
 
 .input {
     width: 35%;
     padding: 12px 20px;
     margin: 8px 20px;
-    border: 5px solid #ccc;
+    border: 5px solid turquoise;
     box-sizing: border-box;
     display: block; 
 }
@@ -185,8 +175,6 @@ body {
     padding: 14px 20px;
     margin: 8px 20px;
     border: none;
-    cursor: pointer;
-    clear: both; 
     width: 35%;
     border-radius: 15px;
 }
@@ -195,49 +183,44 @@ body {
     background-color: cyan;
     border-radius: 15px;
 }
-
-.login_buttons {
-    
+/*Profile photo and buttons on register page*/
+.login_register_right {
     float: right; 
     width: 25%;
     position: absolute;
     top: 350px; 
     right: 50px; 
-    width: 25%;
-    
+    width: 25%;   
 }
 
-.login_buttons img {
+.login_register_right img {
    
     border-radius: 50%;
     display: inline-block;
     overflow: hidden;
 }
 
-.login_buttons a {
+.login_register_right a {
    
     text-align: center;
     font-weight: bold;
     font-size: 20px; 
     padding: 20px 20px;
-    margin: 8px 20px;
     display: block;
-    margin-bottom: 40px; 
+    margin: 20px; 
     color: black;
     background-color: lightskyblue;
     border-radius: 15px;
 }
 
-.login_buttons a:hover {
+.login_register_right a:hover {
     background-color: cyan;
     border-radius: 15px;
 }
-
 
 @media screen and (max-width: 400px) {
     .sidebar a {
       text-align: center;
       float: none;
-      
     }
 }
