--- a/templates/recipes/login.html
+++ b/templates/recipes/login.html
@@ -21,5 +21,10 @@
     <a href="{% url 'recipes:register' %}">Register</a>
     <a href="{% url 'recipes:password_reset_form' %}">Forgot Password</a>
 </div>
+
+<!-- Add the popup modal -->
+
+
 {% endblock %}
+
 
