--- a/static/styles.css
+++ b/static/styles.css
@@ -48,7 +48,7 @@ body {
     float: right;
     display: flex;
     align-items: center; 
-    margin-left: 20px; 
+    margin-left: 10px; 
 }
 
 .profile_photo img {
@@ -115,6 +115,9 @@ body {
     text-decoration: none;
     font-weight: bold;
     font-size: 20px;
+    background-color: lightblue;
+    margin-bottom: 10px;
+    border-radius: 15px;
 }
    
 .sidebar a:hover{
