--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -55,7 +55,7 @@
             </div> 
             <form method="get" action="{% url 'recipes:search' %}">
                 <input type="text" name="query" placeholder="Search...">
-                <button type="submit">Search</button>
+                <button type="submit" class="search_btn">Search</button>
             </form>
 
         </div>
