--- a/templates/recipes/register.html
+++ b/templates/recipes/register.html
@@ -37,7 +37,7 @@
                 </p>
             </div>
             
-            <div class="login_register_right">
+            <div class="display_right">
                 <label class="login_register_label" for="id_picture">Profile photo:</label>
                 <input class="login_register_label" name="picture" type="file" accept="image/*" onchange="previewImage(event)">
                 <div id="imagePreview">
