--- a/templates/recipes/login.html
+++ b/templates/recipes/login.html
@@ -17,7 +17,7 @@
     <button class="submit" type="submit" value="Submit">Sign in</button>
     </form> 
 
-<div class="login_register_right">
+<div class="display_right">
     <a href="{% url 'recipes:register' %}">Register</a>
     <a href="{% url 'recipes:password_reset_form' %}">Forgot Password</a>
 </div>
