--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -22,7 +22,7 @@
                 {% block heading %} 
           
                 {% endblock %}
-                {{ Page }} Page
+                {{ Page }}
             </div>
             <div class="links">
                 {% if Page != 'Home' %}
