--- a/templates/recipes/search.html
+++ b/templates/recipes/search.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 
 {% extends 'recipes/base.html' %}
+
+{% block heading %} 
+Search: {{ query }}
+{% endblock %}
+
+
 {% load static %}
 
 {% block body_block %} 
