--- a/templates/recipes/password_reset_done.html
+++ b/templates/recipes/password_reset_done.html
@@ -4,6 +4,6 @@
 {% extends 'recipes/base.html' %}
 {% load staticfiles %}
 {% block body_block %} 
-    <h1>Check your inbox.</h1>
-    <p> We've emailed you instructions for setting your password. You should receive the email shortly!</p>
+    <div id='heading'>Check your inbox</div>
+    <p class="message"> We've emailed you instructions for setting your password. You should receive the email shortly!</p>
 {% endblock %}
