--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -5,16 +5,18 @@
 {% block body_block %} 
     {% if validlink %}
 
-    <h1>Set a new password!</h1>
+    <div id="heading">Set a new password!</div>
     <form method="POST">
+    <div class="reset_p">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Change my password">
+    </div>
+    <input type="submit"  class="submit"  value="Change my password">
     </form>
 
     {% else %}
 
-    <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+    <p class="message">The password reset link was invalid and may have already been used. Please request a new password reset.</p>
 
     {% endif %}
 {% endblock %}
