--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,7 @@
 /*Base Page*/
 body {
     background-color: lightgrey;
+    
 }
 
 /*Navbar and contents*/
@@ -40,6 +41,7 @@ body {
 
 .links a:hover {
     background-color: cyan;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
     color: black;
     border-radius: 15px;
 }
@@ -83,6 +85,7 @@ body {
 
 .popular a:hover {
     background-color: cyan;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
     color: black;
     border-radius: 15px;
     
@@ -95,6 +98,10 @@ body {
     font-size: 20px;
     padding: 6px;
     border-radius: 15px;
+}
+
+.categories:hover {
+    color: lightgray;
 }
 
 .search_btn{
@@ -111,6 +118,7 @@ body {
 
 .search_btn:hover{
     background-color: cyan;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
 }
 
 .container{
@@ -123,6 +131,7 @@ body {
     float: left;
     overflow: auto;
     padding: 10px;
+    padding-left: 0px;
     width: 200px;
     border-radius: 15px;
     background-color: mintcream;
@@ -144,21 +153,63 @@ body {
    
 .sidebar a:hover{
     background-color: cyan;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
     color: black;
     border-radius: 15px;
 }
 
 
 /*Home Page*/
+
 .home_content {
     margin-left: 220px; 
 }
 
-.welcome_message {
+.message {
     padding-left: 20px; 
     font-size: 20px;
     font-weight: bold;
     width: 55%;
+
+}
+.search_results{
+    padding-left: 20px; 
+    float: left;
+    overflow: auto;
+    padding: 10px;
+    border-radius: 15px;
+    background-color: mintcream;
+    position: relative;
+    height: 100%;
+}
+
+.search_results a {
+    display: block;
+    color: black;
+    padding: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20px;
+    background-color: lightblue;
+    margin-bottom: 10px;
+    border-radius: 15px;
+
+}
+   
+.search_results a:hover{
+    background-color: cyan;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+    color: black;
+    border-radius: 15px;
+}
+.submit a{
+ 
+    text-align: center;
+
+}
+
+.recipe-picture {
+    display: none; 
 }
 
 .home_images {
@@ -167,17 +218,23 @@ body {
 }
 
 .home_images img{
-    height : 250px;
+    height : 300px;
     width: 400px;
     border-radius: 15px;
 }
 
+#home_pictures {
+    display: none; 
+}
+
 /*Login + Register Page*/
+
+
 #heading{
-    font-size: 28px;
+    font-size: 30px;
     padding: 40px 20px; 
     font-weight: bold;
-    text-decoration: underline;
+   
 
 }
 .login_register_label{
@@ -192,6 +249,34 @@ body {
     border: 5px solid turquoise;
     box-sizing: border-box;
     display: block; 
+    font-size: 16px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+
+.reset_p {
+    margin: 8px 20px;
+    display: block; 
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.reset_p input[type="email"]{
+    width: 25%;
+    padding: 12px 20px;
+    margin: 8px 20px;
+    border: 5px solid turquoise;
+    box-sizing: border-box;
+  
+}
+
+.reset_p input[type="password"]{
+    width: 25%;
+    padding: 12px 20px;
+    margin: 8px 20px;
+    border: 5px solid turquoise;
+    box-sizing: border-box;
+  
 }
 
 #edit_profile  {
@@ -207,11 +292,15 @@ body {
     border: none;
     width: 35%;
     border-radius: 15px;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif
 }
 
 .submit:hover{
     background-color: cyan;
-    border-radius: 15px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
 }
 
 /*Profile photo and buttons on register page*/
@@ -233,19 +322,21 @@ body {
 
 .display_right a {
    
-    text-align: center;
-    font-weight: bold;
-    font-size: 20px; 
     padding: 20px 20px;
     display: block;
     margin: 20px; 
     color: black;
     background-color: lightskyblue;
     border-radius: 15px;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
 }
 
 .display_right a:hover {
     background-color: cyan;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
     border-radius: 15px;
 }
 
@@ -258,18 +349,14 @@ body {
     margin-top: 0px;
     background-color: lightskyblue; 
     border-radius: 15px;
-}
-
-.recipes-list {
-    display: flex; /* Set as Flex container*/
-    flex-direction: column;
     padding: 20px;
+    padding-bottom: 0px;
 }
 
 .recipe {
     border: 1px solid #ddd;
-    
-    padding: 20px;
+    padding: 10px;
+    padding-left: 20px;
     background-color: mintcream;
     display: flex;
     justify-content: space-between; /* Alignment of child elements(horizontal)*/
@@ -277,7 +364,7 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 15px;
-  
+    margin-bottom: 20px;
 
 }
 .recipe-text {
@@ -285,34 +372,58 @@ body {
     flex-grow: 1;
    
 }
-
+ 
 .recipe:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
 }
 
 .recipe img {
     border-radius: 15px;
-    width: auto;
+    width: 150px;
     height: 150px;
     object-fit: cover;
-    margin-right: 20px;
+   
 }
 
 .recipe-content {
     max-width: calc(100% - 170px); 
 }
 
-.recipe h3 {
-    margin-top: 0;
-    font-size: 22px;
+.recipe a {
+ 
+    font-size: 26px;
     font-weight: bold;
     color: #333;
+    text-decoration: none;
+}
+
+.recipe a:hover{
+ 
+    font-size: 24px;
+    font-weight: bold;
+    color: cyan;
+    text-decoration: none;
 }
 
 .recipe p {
     font-size: 18px;
     color: #666;
     margin-top: 8px;
+}
+
+#error{
+ 
+    background-color: lightskyblue;
+    font-weight: bold;
+    font-size: 32px;
+    border-radius: 15px;
+    text-align: center;
+}
+
+textarea{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 16px;
+
 }
 
 @media (max-width: 768px) {
@@ -331,6 +442,8 @@ body {
         max-width: 100%;
     }
 }
+
+
 
 @media screen and (max-width: 400px) {
     .sidebar a {
