--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -13,6 +13,8 @@
         
         <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}">
         <script src="{% static 'script.js' %}"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     </head> 
     
     <body>
