--- a/templates/recipes/password_reset_form.html
+++ b/templates/recipes/password_reset_form.html
@@ -8,12 +8,13 @@ Forgot Password
 {% endblock %}
 
 {% block body_block %} 
-  <h1>Forgot your password?</h1>
-  <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
+<div id='heading'>Forgot your password?</div>
+  <p class="message">Enter your email address below, and we'll email instructions for setting a new one.</p>
 
   <form method="POST">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Send me instructions!">
+    <div class="reset_p">{{ form.as_p }}</div>
+    
+    <input type="submit" class="submit" value="Send me instructions!">
   </form>
 {% endblock %}
