--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -3,6 +3,7 @@
 {% extends 'recipes/base.html' %}
 {% load staticfiles %}
 {% block body_block %} 
-<h1>Password reset complete</h1>
-<p>Your new password has been set. You can log in now in via the <a href="{% url 'recipes:login' %}">log in page</a>.</p>
+<div id="heading">Password reset complete</div>
+<p class="message">Your new password has been set. You can log in now in via the</p>
+    <div class="submit" a href="{% url 'recipes:login' %}">log in page</a></div>
 {% endblock %}
