--- a/templates/recipes/register.html
+++ b/templates/recipes/register.html
@@ -14,26 +14,26 @@
             <div class="form-group">
                 <p class="required">
                     <label class="login_register_label" for="id_username">Username:</label>
-                    <input class="input" maxlength="30" name="username" type="text" />
+                    <input class="input" maxlength="30" name="username" type="text" required/>
                     <span class="login_register_label">
                         Required. 30 characters or fewer. Letters, digits and @/./+/-/_ only.
                     </span>
                 </p>
                 <p class="required">
                     <label class="login_register_label" for="id_first">First name:</label>
-                    <input class="input" name="first_name" type="text" />
+                    <input class="input" name="first_name" type="text" required/>
                 </p>
                 <p class="required">
                     <label class="login_register_label" for="id_last">Last name:</label>
-                    <input class="input" name="last_name" type="text" />
+                    <input class="input" name="last_name" type="text" required/>
                 </p>
                 <p class="required">
                     <label class="login_register_label" for="id_email">E-mail:</label>
-                    <input class="input" name="email" type="email" />
+                    <input class="input" name="email" type="email" required/>
                 </p>
                 <p class="required">
                     <label class="login_register_label" for="id_password">Password:</label>
-                    <input class="input" name="password" type="password" />
+                    <input class="input" name="password" type="password" required/>
                 </p>
             </div>
             
