--- a/static/styles.css
+++ b/static/styles.css
@@ -4,7 +4,7 @@ body {
     
 }
 
-/*Navbar and contents*/
+/*Navbar and Navbar contents*/
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -91,6 +91,7 @@ body {
     
 }
 
+/*Search*/
 .categories input[type="text"] {
     width: 200px; 
     height: 20px; 
@@ -120,11 +121,6 @@ body {
     background-color: cyan;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
 }
-
-.container{
-    display:flex;
-}
-
 
 /*Sidebar*/
 .sidebar {
@@ -158,54 +154,10 @@ body {
     border-radius: 15px;
 }
 
-
 /*Home Page*/
 
 .home_content {
     margin-left: 220px; 
-}
-
-.message {
-    padding-left: 20px; 
-    font-size: 20px;
-    font-weight: bold;
-    width: 55%;
-
-}
-.search_results{
-    padding-left: 20px; 
-    float: left;
-    overflow: auto;
-    padding: 10px;
-    border-radius: 15px;
-    background-color: mintcream;
-    position: relative;
-    height: 100%;
-}
-
-.search_results a {
-    display: block;
-    color: black;
-    padding: 8px;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 20px;
-    background-color: lightblue;
-    margin-bottom: 10px;
-    border-radius: 15px;
-
-}
-   
-.search_results a:hover{
-    background-color: cyan;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
-    color: black;
-    border-radius: 15px;
-}
-.submit a{
- 
-    text-align: center;
-
 }
 
 .recipe-picture {
@@ -227,63 +179,16 @@ body {
     display: none; 
 }
 
-/*Login + Register Page*/
-
-
-#heading{
-    font-size: 30px;
-    padding: 40px 20px; 
-    font-weight: bold;
-   
-
-}
-.login_register_label{
+/*message used on multiple pages*/
+.message {
+    padding-left: 20px; 
     font-size: 20px;
-    margin: 8px 20px;
-}
-
-.input {
-    width: 35%;
-    padding: 12px 20px;
-    margin: 8px 20px;
-    border: 5px solid turquoise;
-    box-sizing: border-box;
-    display: block; 
-    font-size: 16px;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-
-.reset_p {
-    margin: 8px 20px;
-    display: block; 
-    font-size: 22px;
     font-weight: bold;
+    width: 55%;
+
 }
 
-.reset_p input[type="email"]{
-    width: 25%;
-    padding: 12px 20px;
-    margin: 8px 20px;
-    border: 5px solid turquoise;
-    box-sizing: border-box;
-  
-}
-
-.reset_p input[type="password"]{
-    width: 25%;
-    padding: 12px 20px;
-    margin: 8px 20px;
-    border: 5px solid turquoise;
-    box-sizing: border-box;
-  
-}
-
-#edit_profile  {
-    width: 500px;
-    
-}
-
+/*Buttons*/
 .submit {
     background-color: lightskyblue;
     color: black;
@@ -303,7 +208,71 @@ body {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
 }
 
-/*Profile photo and buttons on register page*/
+.submit a{
+    text-align: center;
+    color:black;
+    text-decoration: none;
+}
+
+/*Search Page*/
+.search_results{
+    float: left;
+    overflow: auto;
+    padding: 10px;
+    border-radius: 15px;
+    background-color: mintcream;
+    position: relative;
+    height: 100%;
+    padding-bottom: 0px;
+}
+
+.search_results a {
+    display: block;
+    color: black;
+    padding: 8px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20px;
+    background-color: lightblue;
+    margin-bottom: 10px;
+    border-radius: 15px;
+
+}
+   
+.search_results a:hover{
+    background-color: cyan;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
+    color: black;
+    border-radius: 15px;
+}
+
+/*Login + Register Page + Edit Profile*/
+#edit_profile  {
+    width: 500px;
+}
+
+.login_register_label{
+    font-size: 20px;
+    margin: 8px 20px;
+}
+
+.input {
+    width: 35%;
+    padding: 12px 20px;
+    margin: 8px 20px;
+    border: 5px solid turquoise;
+    box-sizing: border-box;
+    display: block; 
+    font-size: 16px;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+textarea{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 16px;
+}
+
+/*Profile photo and buttons on register and edit profile page*/
 .display_right {
     float: right; 
     width: 25%;
@@ -340,11 +309,54 @@ body {
     border-radius: 15px;
 }
 
+/*error messages*/
+#error{
+    background-color: lightskyblue;
+    font-weight: bold;
+    font-size: 32px;
+    border-radius: 15px;
+    text-align: center;
+}
 
+/*Heading used on multiple pages*/
+#heading{
+    font-size: 30px;
+    padding: 40px 20px; 
+    font-weight: bold;
+}
 
+/*Reset password pages*/
+.reset_p {
+    margin: 8px 20px;
+    display: block; 
+    font-size: 22px;
+    font-weight: bold;
+}
 
-.content {
-    flex-grow: 1; /* How much space to allocate in the remaining space */
+.reset_p input[type="email"]{
+    width: 25%;
+    padding: 12px 20px;
+    margin: 8px 20px;
+    border: 5px solid turquoise;
+    box-sizing: border-box;
+  
+}
+
+.reset_p input[type="password"]{
+    width: 25%;
+    padding: 12px 20px;
+    margin: 8px 20px;
+    border: 5px solid turquoise;
+    box-sizing: border-box;
+}
+
+/*Category page*/
+.category_container{
+    display: flex;
+}
+
+.category_content {
+    flex-grow: 1;
     margin: 20px;
     margin-top: 0px;
     background-color: lightskyblue; 
@@ -353,31 +365,29 @@ body {
     padding-bottom: 0px;
 }
 
-.recipe {
+.category_recipes {
     border: 1px solid #ddd;
     padding: 10px;
     padding-left: 20px;
     background-color: mintcream;
     display: flex;
-    justify-content: space-between; /* Alignment of child elements(horizontal)*/
+    justify-content: space-between;
     align-items: center;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 15px;
     margin-bottom: 20px;
-
 }
+
 .recipe-text {
-  
     flex-grow: 1;
-   
 }
  
-.recipe:hover {
+.category_recipes:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.5);
 }
 
-.recipe img {
+.category_recipes img {
     border-radius: 15px;
     width: 150px;
     height: 150px;
@@ -389,7 +399,7 @@ body {
     max-width: calc(100% - 170px); 
 }
 
-.recipe a {
+.category_recipes a {
  
     font-size: 26px;
     font-weight: bold;
@@ -397,7 +407,7 @@ body {
     text-decoration: none;
 }
 
-.recipe a:hover{
+.category_recipes a:hover{
  
     font-size: 24px;
     font-weight: bold;
@@ -405,27 +415,13 @@ body {
     text-decoration: none;
 }
 
-.recipe p {
+.category_recipes p {
     font-size: 18px;
     color: #666;
     margin-top: 8px;
 }
 
-#error{
- 
-    background-color: lightskyblue;
-    font-weight: bold;
-    font-size: 32px;
-    border-radius: 15px;
-    text-align: center;
-}
-
-textarea{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 16px;
-
-}
-
+/* resizing pages */
 @media (max-width: 768px) {
     .recipes-list {
         padding: 10px;
@@ -442,8 +438,6 @@ textarea{
         max-width: 100%;
     }
 }
-
-
 
 @media screen and (max-width: 400px) {
     .sidebar a {
