--- a/templates/recipes/category_detail.html
+++ b/templates/recipes/category_detail.html
@@ -4,7 +4,7 @@
 {% load static %}
 
 {% block body_block %}
-<div class="container">
+<div class="category_container">
     <div class="sidebar">
         <ul>
             {% for category in categories%}
@@ -13,11 +13,11 @@
         </ul>
     </div>
 
-    <div class="content">
+    <div class="category_content">
         <!-- Content next to the sidebar -->
         <div class="recipes-list">
             {% for recipe in recipes %}
-                <div class="recipe">
+                <div class="category_recipes">
                     <div class="recipe-text">
                         <a href="{% url 'recipes:recipe' recipe.id %}">{{ recipe.title }}</a>
 
