--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -4,6 +4,8 @@
 {% load staticfiles %}
 {% block body_block %} 
 <div id="heading">Password reset complete</div>
-<p class="message">Your new password has been set. You can log in now in via the</p>
-    <div class="submit" a href="{% url 'recipes:login' %}">log in page</a></div>
+<p class="message">Your new password has been set. You can now log in!</p>
+    <div class="submit">
+        <a  href="{% url 'recipes:login' %}">log in page</a>
+    </div>
 {% endblock %}
