working likes and views

--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -66,6 +66,8 @@
           
             {% endblock %}
         </div>
+        <script src="{% static "js/jquery.com/jquery-3.3.1.min.js" %}" crossorigin="anonymous"></script>
+        <script src="{% static "js/recipes-jquery.js" %}" crossorigin="anonymous"></script>
 
     </body>  
 </html>
