--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -29,7 +29,7 @@
                     <a href="{% url 'recipes:home' %}">Home</a>
                 {% endif %}
                 {% if user.is_authenticated %} 
-                    <a href="{% url 'recipes:edit_profile' %}">Edit Profile</a>
+                    <a href="{% url 'recipes:view_profile' %}">Profile</a>
                     <a href="{% url 'recipes:logout' %}">Logout</a>
                     <a href="{% url 'recipes:upload' %}">Upload Recipe</a>
                     <div class = profile_photo>
