--- a/templates/recipes/base.html
+++ b/templates/recipes/base.html
@@ -18,7 +18,7 @@
     <body>
         <div class="navbar">
             <div class="logo">
-                <img src="{{ MEDIA_URL }}logo.png" alt="Culinary Carnival Logo"/>
+                <a href="{% url 'recipes:home' %}"><img src="{{ MEDIA_URL }}logo.png" alt="Culinary Carnival Logo"/></a>
                 
                 {% block heading %} 
           
