--- a/templates/recipes/upload.html
+++ b/templates/recipes/upload.html
@@ -14,21 +14,19 @@
                 <label>Title:</label>
                 <input type="text" name="title" class="input" placeholder="title" required autofocus>
                 
-                <label>Category:</label>
+                <label>Category: [please select]</label>
                 <br>
-                <select name="categories" multiple>
+                <select name="categories" class="custom-select" multiple>
                     {% for category in categories %}
                         <option value="{{ category.id }}">{{ category.name }}</option>
                     {% endfor %}
                 </select>
-                <br>
-                <br>
                 
                 <label >Preparation Time:</label>
-                <input type="text" name="description" class="input" placeholder="preparation time" required>
+                <input type="text" name="preparation" class="input" placeholder="preparation time" required>
                
                 <label >Cooking Time:</label>
-                <input type="text" name="description" class="input" placeholder="cooking time" required>
+                <input type="text" name="cooking" class="input" placeholder="cooking time" required>
                 
                 <label >Ingredients: [separate by new line]</label>
                 <textarea type="text" name="ingredients" class="input" placeholder="ingredients" required></textarea>
